Expand documentation on the Explicit Connect mode

--- a/docs/wearables/sdks/health/connection-policies.mdx
+++ b/docs/wearables/sdks/health/connection-policies.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Health SDK Connection Policy"
+title: "Health SDK Connection Policies"
 sidebarTitle: "Connection Policies"
 ---
 
@@ -39,7 +39,6 @@ A connection is destroyed only when:
 
 * You use the [Deregister Connection endpoint](/api-reference/user/deregister-a-provider) to de-register the HealthKit or Health
   Connect connection remotely from your backend servers.
-
 
 <Info>
 `connect()` and `disconnect()` in Explicit Connect mode requires a call to Junction API over the Internet.
