add note about within_radius

--- a/docs/api-reference/lab-testing/area-info.mdx
+++ b/docs/api-reference/lab-testing/area-info.mdx
@@ -104,7 +104,7 @@ fmt.Printf("Received data %s\n", response)
   "central_labs": {
     "labcorp": {
       "patient_service_centers": {
-        "within_radius": 5,
+        "within_radius": 5, # number of PSC's within radius of provided zip code
         "radius": "25",
         "capabilities": ["stat"]
       }
