--- a/docs/lab/walk-in/order-lifecycle.mdx
+++ b/docs/lab/walk-in/order-lifecycle.mdx
@@ -109,3 +109,10 @@ If an Appointment is cancelled **after** a requisition has been created:
 
 1. The Appointment will move to the `cancelled` status; and
 2. The Order will move from the `appointment_pending` or `appointment_scheduled` status to the `appointment_cancelled` status.
+
+### Auto-cancellation of appointments without requisition
+
+In cases where appointments can be scheduled before a requisition has been created, the appointment will be automatically cancelled by Junction if the following happens:
+
+1. More than 8 hours have passed since the order was created, and no requisition has been received.
+2. There is less than 2 hours until the appointment start time, and no requisition has been received.
