--- a/docs/changelog/wearables/api.mdx
+++ b/docs/changelog/wearables/api.mdx
@@ -6,7 +6,7 @@ import HorizonAIBeta from '/snippets/horizon-ai-beta.mdx';
 
 ### Horizon AI Query WHERE clause (September 2025)
 
-Horizon AI Query and Continuous Query now accept a `where` clause so you can filter input rows before aggregation.
+Horizon AI Query now accepts a `where` clause so you can filter input rows before aggregation.
 
 <Accordion icon="filter" iconType="duotone" title="Details" defaultOpen>
 
