Update API Domains

--- a/docs/api-details/junction-api.mdx
+++ b/docs/api-details/junction-api.mdx
@@ -17,12 +17,16 @@ For managing Team configuration and Org resources programmatically, see [Junctio
 
 Junction provides two Sandbox environments and two Production environments today:
 
-| Environment      | Base URL                              | Team API Key Prefix    |
-| ---------------- | ------------------------------------- | ---------------------- |
-| 🇺🇸 Production US    | `https://api.tryvital.io/`            | `pk_us_*`
-| 🇪🇺 Production EU    | `https://api.eu.tryvital.io/`         | `pk_eu_*`
-| 🇺🇸 Sandbox US       | `https://api.sandbox.tryvital.io/`    | `sk_us_*`
-| 🇪🇺 Sandbox EU       | `https://api.sandbox.eu.tryvital.io/` | `sk_eu_*`
+| Environment      | Base URL                                  | Team API Key Prefix    |
+| ---------------- | ----------------------------------------- | ---------------------- |
+| 🇺🇸 Production US    | `https://api.us.junction.com/`         | `pk_us_*`
+| 🇪🇺 Production EU    | `https://api.eu.junction.com/`         | `pk_eu_*`
+| 🇺🇸 Sandbox US       | `https://api.sandbox.us.junction.com/` | `sk_us_*`
+| 🇪🇺 Sandbox EU       | `https://api.sandbox.eu.junction.com/` | `sk_eu_*`
+
+<Note>
+If you are using a `*.tryvital.io` Base URL, they are still supported alongside `*.junction.com`.
+</Note>
 
 Sandbox environments are functionally identical to Production environments, except that:
 
