--- a/docs/api-reference/org-management/org/get-org.mdx
+++ b/docs/api-reference/org-management/org/get-org.mdx
@@ -10,7 +10,7 @@ import OrgManagementAPI from '/snippets/org-management-api.mdx';
 <RequestExample>
 ```bash cURL
 curl --request GET \
-  --url https://api.tryvital.io/management/v1/org/{org_id} \
+  --url https://api.management.junction.com/v1/org/{org_id} \
   --header 'X-Vital-Org-Key: <api-key>'
 ```
 </RequestExample>
