--- a/docs/api-reference/org-management/team-data-pull-preferences/get-team-data-pull-preferences.mdx
+++ b/docs/api-reference/org-management/team-data-pull-preferences/get-team-data-pull-preferences.mdx
@@ -6,7 +6,7 @@ title: Get Team Data Pull Preferences
 <RequestExample>
 ```bash cURL
 curl --request GET \
-  --url https://api.tryvital.io/management/v1/org/{org_id}/team_data_pull_preferences/{env}/{region} \
+  --url https://api.management.junction.com/v1/org/{org_id}/team_data_pull_preferences/{env}/{region} \
   --header 'X-Vital-Org-Key: <api-key>'
 ```
 </RequestExample>
