--- a/docs/api-reference/org-management/team-data-pull-preferences/upsert-team-data-pull-preferences.mdx
+++ b/docs/api-reference/org-management/team-data-pull-preferences/upsert-team-data-pull-preferences.mdx
@@ -12,7 +12,7 @@ import HistoricalPullLimitTable from '/snippets/historical-pull-limits.mdx';
 <RequestExample>
 ```bash cURL
 curl --request POST \
-  --url https://api.tryvital.io/management/v1/org/{org_id}/team_data_pull_preferences/{env}/{region} \
+  --url https://api.management.junction.com/v1/org/{org_id}/team_data_pull_preferences/{env}/{region} \
   --header 'X-Vital-Org-Key: <api-key>'
   --data '{
     "team_ids": [
