--- a/docs/api-reference/org-management/team-etl-pipeline/delete-team-etl-pipelines.mdx
+++ b/docs/api-reference/org-management/team-etl-pipeline/delete-team-etl-pipelines.mdx
@@ -11,7 +11,7 @@ import OrgManagementAPI from '/snippets/org-management-api.mdx';
 <RequestExample>
 ```bash cURL
 curl --request DELETE \
-  --url https://api.tryvital.io/management/v1/org/{org_id}/team_etl_pipelines/{env}/{region} \
+  --url https://api.management.junction.com/v1/org/{org_id}/team_etl_pipelines/{env}/{region} \
   --header 'X-Vital-Org-Key: <api-key>'
 ```
 </RequestExample>
