--- a/docs/snippets/org-management-api.mdx
+++ b/docs/snippets/org-management-api.mdx
@@ -3,7 +3,7 @@
 </Info>
 
 <Tip>
-The base URL of this endpoint is `https://api.tryvital.io/management/`.
+The base URL of this endpoint is `https://api.management.junction.com/`.
 
 The endpoint accepts only [Management Key](/api-details/junction-management-api#authentication) (`X-Management-Key`).
 Team API Key is not accepted.
