--- a/docs/api-reference/org-management/invite/create-or-resend-invite.mdx
+++ b/docs/api-reference/org-management/invite/create-or-resend-invite.mdx
@@ -11,7 +11,7 @@ import OrgManagementAPI from '/snippets/org-management-api.mdx';
 <RequestExample>
 ```bash cURL
 curl --request POST \
-  --url https://api.tryvital.io/management/v1/org/{org_id}/invite \
+  --url https://api.management.junction.com/v1/org/{org_id}/invite \
   --header 'Content-Type: application/json' \
   --header 'X-Vital-Org-Key: <api-key>' \
   --data '{
