--- a/docs/api-reference/org-management/invite/revoke-invite.mdx
+++ b/docs/api-reference/org-management/invite/revoke-invite.mdx
@@ -11,7 +11,7 @@ import OrgManagementAPI from '/snippets/org-management-api.mdx';
 <RequestExample>
 ```bash cURL
 curl --request DELETE \
-  --url https://api.tryvital.io/management/v1/org/{org_id}/invite/{invite_id} \
+  --url https://api.management.junction.com/v1/org/{org_id}/invite/{invite_id} \
   --header 'X-Vital-Org-Key: <api-key>'
 ```
 </RequestExample>
