--- a/docs/api-reference/org-management/team-custom-credentials/upsert-team-custom-credentials.mdx
+++ b/docs/api-reference/org-management/team-custom-credentials/upsert-team-custom-credentials.mdx
@@ -19,7 +19,7 @@ for more information.
 <RequestExample>
 ```bash cURL
 curl --request POST \
-  --url https://api.tryvital.io/management/v1/org/{org_id}/team_custom_credentials/{env}/{region} \
+  --url https://api.management.junction.com/v1/org/{org_id}/team_custom_credentials/{env}/{region} \
   --header 'Content-Type: application/json' \
   --header 'X-Vital-Org-Key: <api-key>' \
   --data '{
