--- a/docs/api-reference/org-management/team/update-team.mdx
+++ b/docs/api-reference/org-management/team/update-team.mdx
@@ -11,7 +11,7 @@ import OrgManagementAPI from '/snippets/org-management-api.mdx';
 <RequestExample>
 ```bash cURL
 curl --request PATCH \
-  --url https://api.tryvital.io/management/v1/org/{org_id}/team/{team_id} \
+  --url https://api.management.junction.com/v1/org/{org_id}/team/{team_id} \
   --header 'Content-Type: application/json' \
   --header 'X-Vital-Org-Key: <api-key>' \
   --data '{
