Rename Vital Dashboard to Junction Dashboard

--- a/docs/api-details/junction-api.mdx
+++ b/docs/api-details/junction-api.mdx
@@ -39,7 +39,7 @@ Sandbox environments are functionally identical to Production environments, exce
 
 Junction API accepts **Team API Key**. You can provision a Team API Key through:
 
-1. the Team Config page in the [Junction Dashboard](https://app.tryvital.io); or
+1. the Team Config page in the [Junction Dashboard](https://app.junction.com); or
 2. the [Create Team API Key](api-reference/org-management/team-api-keys/create-team-api-key) endpoint of the
    [Junction Management API](/api-details/junction-management-api).
 
