--- a/docs/api-reference/horizon-ai/aggregation/data-prioritization.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/data-prioritization.mdx
@@ -72,7 +72,7 @@ as the highest priority — above the team provider priority — specifically in
 
 ## Managing Provider Priorities
 
-You can manage the provider priorities for each summary type through the **Data Priority** section of the [Vital Dashboard](https://app.tryvital.io/).
+You can manage the provider priorities for each summary type through the **Data Priority** section of the [Junction Dashboard](https://app.junction.com/).
 
 <Note>A larger number indicates a higher priority.</Note>
 
