--- a/docs/api-reference/horizon-ai/aggregation/using-continuous-query.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/using-continuous-query.mdx
@@ -92,6 +92,6 @@ You can manage your Continuous Query using our [Org Management API](/api-referen
 - [Create Continuous Query Endpoint](/api-reference/horizon-ai/continuous-query/create)
 - [List Continuous Queries Endpoint](/api-reference/horizon-ai/continuous-query/list)
 
-You can also manage them through the _Continuous Query_ section of the Vital Dashboard:
+You can also manage them through the _Continuous Query_ section of the Junction Dashboard:
 
 ![Screenshot of the query creator](/img/aggregation/query-creator-dashboard.png)
