--- a/docs/api-reference/horizon-ai/python-sdk/getting-started.mdx
+++ b/docs/api-reference/horizon-ai/python-sdk/getting-started.mdx
@@ -26,7 +26,7 @@ To set the Vital API Key for the Horizon AI Python SDK, you can:
 </Accordion>
 
 <Accordion title="Data Scientists and Developers" icon="user" defaultOpen>
-Sign-in locally on your machine with your [Vital Dashboard](https://app.tryvital.io/) account. You can
+Sign-in locally on your machine with your [Junction Dashboard](https://app.junction.com/) account. You can
 do so through the [Horizon AI SDK Command Line Tool](#sdk-command-line-tool) as detailed below.
 </Accordion>
 
@@ -77,8 +77,8 @@ poetry run vitalx-cli auth login
 
 </Step>
 
-<Step title="Sign in with your Vital Dashboard account">
-You would be prompted in your default web browser to sign-in to the [Vital Dashboard](https://app.tryvital.io/).
+<Step title="Sign in with your Junction Dashboard account">
+You would be prompted in your default web browser to sign-in to the [Junction Dashboard](https://app.junction.com/).
 You will then be asked to confirm the device authorization.
 
 <Frame>
