--- a/docs/changelog/core/api.mdx
+++ b/docs/changelog/core/api.mdx
@@ -57,7 +57,7 @@ As a recap, there are now two types of Management Keys:
 <Accordion title="Details" defaultOpen icon="key" iconType="duotone">
   All Management Keys — Org or Team — are accepted by the `X-Management-Key` header, as well as the deprecated `X-Vital-Org-Key` header.
 
-  Selected customers can now manage Management Keys in the [Junction Dashboard](https://app.tryvital.io/) through:
+  Selected customers can now manage Management Keys in the [Junction Dashboard](https://app.junction.com/) through:
 
   | Type                | Remarks                                                                    |
   | ------------------- | -------------------------------------------------------------------------- |
