--- a/docs/changelog/core/dashboard.mdx
+++ b/docs/changelog/core/dashboard.mdx
@@ -129,7 +129,7 @@ We have improved the search and filtering capabilities in the Orders page, helpi
 
 ### Improved User Search and Introspection experience (Jun 2024)
 
-The Users page in the Vital Dashboard is now a search-first experience with more filtering and sorting options
+The Users page in the Junction Dashboard is now a search-first experience with more filtering and sorting options
 available. You can now also click on specific users to inspect device connection status and the patient details.
 
 <Accordion title="Details" defaultOpen icon="magnifying-glass" iconType="duotone">
