--- a/docs/home/quickstart.mdx
+++ b/docs/home/quickstart.mdx
@@ -6,11 +6,11 @@ description: "A quick introduction to building with Vital"
 ## 1. API keys
 
 Let's test out running Vital locally by cloning the [Quickstart app](https://github.com/tryVital/quickstart).
-You can get API keys by signing up in the [Dashboard](https://app.tryvital.io).
+You can get API keys by signing up in the [Dashboard](https://app.junction.com).
 Once registered, you can create a team. A team is associated with a region (either `EU` or `US`),
 the region dictates where data is stored. You can learn more at [regions](/api-details/regions).
 
-To create a team and get your API keys, you first need to sign up for a Vital account in the [Dashboard](https://app.tryvital.io).
+To create a team and get your API keys, you first need to sign up for a Vital account in the [Dashboard](https://app.junction.com).
 
 Once registered, you can create a team by hovering over your username at the bottom of the Dashboard sidebar.
 A team is associated with a region (either `EU` or `US`), the region dictates where data is stored.
