--- a/docs/lab/overview/quickstart.mdx
+++ b/docs/lab/overview/quickstart.mdx
@@ -6,7 +6,7 @@ We have carefully designed Vital’s API to ensure a seamless and hassle-free ex
 
 ### What you need
 
-* If you haven't done so yet, you can get API keys by signing up for a Vital account in the [Dashboard](https://app.tryvital.io). Detailed instructions are available [here](/home/quickstart#1-api-keys).
+* If you haven't done so yet, you can get API keys by signing up for a Vital account in the [Dashboard](https://app.junction.com). Detailed instructions are available [here](/home/quickstart#1-api-keys).
 * One of our [client libraries](/home/libraries). The lab testing API is available for the [python](https://pypi.org/project/vital/) and [node](https://www.npmjs.com/package/@tryvital/vital-node) SDKs. If none of those fit your use-case, you can always directly call the API. Email support@tryvital.io for specific library support.
 
 In the following, replace `{{BASE_URL}}` with your team's [environment URL](/home/environments).
