--- a/docs/lab/results/critical-results.mdx
+++ b/docs/lab/results/critical-results.mdx
@@ -78,7 +78,7 @@ For critical results, the laboratory will contact a physician, so they can provi
 
 After you receive the webhook, you can use the [`GET /order/{order_id}/result`](/api-reference/results/get-results) endpoint to fetch the raw results.
 
-You can test the webhook event by using the [Vital Dashboard](https://app.tryvital.io) Webhooks section,
+You can test the webhook event by using the [Junction Dashboard](https://app.junction.com) Webhooks section,
 where you can register an endpoint and subscribe to the `labtest.result.critical` event.
 The following images show what the screen should look like after you have an endpoint registered
 and have selected the `Testing` section inside the endpoint configurations.
