--- a/docs/lab/workflow/scheduled-orders.mdx
+++ b/docs/lab/workflow/scheduled-orders.mdx
@@ -2,7 +2,7 @@
 title: "Scheduled Orders"
 ---
 
-Vital provides a way to schedule your orders for a future date, both via the API and via the Vital Dashboard. A Scheduled order is
+Vital provides a way to schedule your orders for a future date, both via the API and via the Junction Dashboard. A Scheduled order is
 one that will only be fulfilled in the future, so it won't be created in the Partner Laboratories until the defined date. This is useful for
 defining follow-up orders after placing an initial Lab Order for a patient.
 
@@ -53,7 +53,7 @@ Placing a scheduled order for 6 of January of 2025 would look like this:
 ```
 
 
-## Ordering through the Vital Dashboard
+## Ordering through the Junction Dashboard
 
 To place a Scheduled Order through the dashboard, just follow the normal procedure until you reach the Lab Testing selection screen.
 
