--- a/docs/wearables/connecting-providers/link_flow.mdx
+++ b/docs/wearables/connecting-providers/link_flow.mdx
@@ -15,7 +15,7 @@ The Vital Link flow starts when a user wants to connect a wearable device with V
 <Step title="Pre-requisites">
 Make sure that:
 
-1. You have your Vital API Key [dashboard](https://app.tryvital.io) ready to use.
+1. You have your Vital API Key [dashboard](https://app.junction.com) ready to use.
 
 2. You have created a Vital User that corresponds to a user in your domain. [See](/home/quickstart#3-creating-your-first-user) for an example.
 </Step>
