--- a/docs/wearables/guides/whoop.mdx
+++ b/docs/wearables/guides/whoop.mdx
@@ -10,7 +10,7 @@ WHOOP [Bring Your Own OAuth](/wearables/connecting-providers/bring_your_own_oaut
 
 WHOOP is a [BYOO](/wearables/connecting-providers/bring_your_own_oauth) only provider, so you will need your own app in [WHOOP's developer dashboard](https://developer-dashboard.WHOOP.com/).
 
-Then, you can configure the WHOOP integration in the Vital dashboard by navigating to the Config > Custom Credentials page and clicking "Setup" next to WHOOP V2.
+Then, you can configure the WHOOP integration in the Junction Dashboard by navigating to the Config > Custom Credentials page and clicking "Setup" next to WHOOP V2.
 ![WHOOP V2 config](/img/whoop_config.png)
 
 ## Limitations
