--- a/docs/wearables/providers/test_data.mdx
+++ b/docs/wearables/providers/test_data.mdx
@@ -33,7 +33,7 @@ Demo users have certain limitations to keep in mind:
 
 ## Usage
 
-First, you need a Vital user. You can create one either through the [dashboard](https://app.tryvital.io) or through the [API](/api-reference/user/create-user).
+First, you need a Vital user. You can create one either through the [dashboard](https://app.junction.com) or through the [API](/api-reference/user/create-user).
 
 After creating the user, the `Users` page of your dashboard will look like this:
 
