--- a/docs/webhooks/event-structure.mdx
+++ b/docs/webhooks/event-structure.mdx
@@ -14,7 +14,7 @@ All our webhook events have the following standard structure:
   * `user_id` and `client_user_id`: The unique Vital User ID.
   * `client_user_id`: Your application user reference you declared for [the Vital User](/api-reference/user/create-user).
 
-Schemas and examples are available through [the Event Catalog tab in the Webhooks section of our Web app](https://app.tryvital.io).
+Schemas and examples are available through [the Event Catalog tab in the Webhooks section of our Web app](https://app.junction.com).
 
 <CodeGroup>
 ```json Basic event structure
