--- a/docs/webhooks/introduction.mdx
+++ b/docs/webhooks/introduction.mdx
@@ -47,7 +47,7 @@ Historical data are data that exist prior to the connection establishment. Becau
 — and might potentially run into temporary provider-side API rate limits — these backfill jobs may take minutes to hours to complete.
 
 <Note>
-You can inspect the status of historical data backfill jobs of each individual user through [Vital Dashboard](https://app.tryvital.io) or
+You can inspect the status of historical data backfill jobs of each individual user through [Junction Dashboard](https://app.junction.com) or
 [Vital API](/api-reference/data/introspection/historical-pulls).
 </Note>
 
@@ -103,7 +103,7 @@ Once the historical data backfill stage completes, Vital [monitors for new data 
 Whenever new data or changes are discovered, Vital sends them out as **Data Events** as soon as possible:
 
 <Note>
-You can inspect the state of incremental data updates of each individual user through [Vital Dashboard](https://app.tryvital.io) or
+You can inspect the state of incremental data updates of each individual user through [Junction Dashboard](https://app.junction.com) or
 [Vital API](/api-reference/data/introspection/user-resources).
 </Note>
 
