--- a/docs/lab/testkits/communications.mdx
+++ b/docs/lab/testkits/communications.mdx
@@ -10,7 +10,7 @@ Customers have the following options when setting this up:
 
 Each option has a different set of content and status changes, depending on what triggered them.
 
-<Info>You can enable or disable SMS individually through the [**Vital Dashboard**](http://app.tryvital.io/), under the Team Settings section.</Info>
+<Info>You can enable or disable SMS individually through the [**Junction Dashboard**](http://app.junction.com/), under the Team Settings section.</Info>
 
 ## Default Communications
 
