--- a/docs/webhooks/debugging.mdx
+++ b/docs/webhooks/debugging.mdx
@@ -4,9 +4,9 @@ title: "Debugging"
 
 You can debug webhook events in one of two ways: the Dashboard or using the Svix API.
 
-### [Vital Dashboard](https://app.tryvital.io)
+### [Junction Dashboard](https://app.junction.com)
 
-The Vital [Dashboard](https://app.tryvital.io)
+The Vital [Dashboard](https://app.junction.com)
 has a Webhooks section that allows you to test and observe webhook events.
 
 <img src="/img/webhook_logs.png" width="100%" />
